--- a/ERPWeb/Views/AgroConfiguration/CreateAgroSalesProduct.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/CreateAgroSalesProduct.cshtml
@@ -382,6 +382,10 @@
                                 <button type="button" id="rrrr" class="btn btn-tool bg-red" data-card-widget="remove">
                                     <i class="fas fa-times"></i>
                                 </button>
+                                <button type="button" id="rrrr" class="btn btn-tool bg-red" data-card-widget="remove">
+                                    <i class="fas fa-times"></i>
+                                </button>
+
 
                             </div>
                         </div>
